# easybox-rust

./: .gitignore  Cargo.toml  README.md
devops/helm/easy-box-service/: Chart.yaml  values-local.yaml.dist  values.yaml
devops/helm/easy-box-service/templates/: deployment.yaml
src/: logger.rs  main.rs
src/models/: basebox.rs  item.rs  mod.rs
src/packer/: packer.rs
src/start/: mod.rs
