[package]
name = "packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4"}
console_log = { version = "1", optional = true }
gelf_logger = "0.3"
cfg-if = "1.0.0"


[features]
default = ["console_log"]