[package]
name = "packer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4"}
console_log = { version = "1", optional = true }
simple_logger = "5"
gelf_logger = "0.3"
cfg-if = "1.0.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
actix-web = "4"
chrono="0.4"
fern="0.7"
gelf="0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multi_log = "0.1"
[features]
default = ["console_log"]